# subspace

./: .bazelrc  .clang-format  .clangd  .doxygen  .gclient  .gitattributes  .gitignore  .gitmodules  .hdoc.toml  BUILD  BUILD.bazel  BUILD.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPS  PRINCIPLES.md  README.md  STYLE.md  USAGE.md  WORKSPACE.bazel  prelude.h
cir/: CMakeLists.txt  cir_main.cc  llvm.h  main.cc  syntax.md
cir/examples/: ctor_dtor.txt  ternary_ctor.txt
cir/lib/: output.h  run.cc  run.h  source_span.h  tool.cc  tool.h  visit.cc  visit.h
cir/tests/: cir_test.h  smoke_unittest.cc
subdoc/: CMakeLists.txt  README.md  llvm.h  subdoc_main.cc
subdoc/gen_tests/: gen_tests.cc  subdoc-test-style.css
subdoc/lib/: clang_resource_dir.cc  clang_resource_dir.h  database.h  doc_attributes.h  friendly_names.h  linked_type.cc  linked_type.h  method_qualifier.h  names.h  parse_comment.cc  parse_comment.h  path.cc  path.h  record_type.h  requires.cc  requires.h  run.cc  run.h  run_options.h  stmt_to_string.cc  stmt_to_string.h  type.cc  type.h  unique_symbol.h  visit.cc  visit.h
subdoc/tests/: access_unittest.cc  aliases_unittest.cc  classes_unittest.cc  concepts_unittest.cc  cpp_version.h  doc_attributes_unittest.cc  fields_unittest.cc  functions_unittest.cc  include_exclude_unittest.cc  inherit_unittest.cc  macros_unittest.cc  markdown_unittest.cc  methods_unittest.cc  namespaces_unittest.cc  records_unittest.cc  self_name_replace_unittest.cc  smoke_unittest.cc  source_link_unittest.cc  styles_unittest.cc  subdoc_gen_test.h  subdoc_test.h  test_main.cc  test_main.h  type_unittest.cc  typedefs_unittest.cc  types_unittest.cc
subspace/: CMakeLists.txt  index.html  prelude.h
subspace/assertions/: arch.h  check.h  check_unittest.cc  debug_check.h  endian.h  endian_unittest.cc  panic.cc  panic.h  panic_unittest.cc  unreachable.h  unreachable_unittest.cc
subspace/cast/: subclass.h  subclass_unittest.cc
subspace/choice/: choice.h  choice_types.h  choice_types_unittest.cc  choice_unittest.cc
subspace/construct/: as_bits.h  as_bits_unittest.cc  default.h  default_unittest.cc  from.h  from_unittest.cc  into.h  into_unittest.cc  make_default.h  make_default_unittest.cc  safe_from_reference.h  to_bits.h  to_bits_unittest.cc  transmogrify.h  transmogrify_unittest.cc
subspace/containers/: array.h  array_unittest.cc  compat_deque.h  compat_deque_unittest.cc  compat_forward_list.h  compat_forward_list_unittest.cc  compat_list.h  compat_list_unittest.cc  compat_map.h  compat_map_unittest.cc  compat_pair_concept.h  compat_queue.h  compat_queue_unittest.cc  compat_set.h  compat_set_unittest.cc  compat_stack.h  compat_stack_unittest.cc  compat_unordered_map.h  compat_unordered_map_unittest.cc  compat_unordered_set.h  compat_unordered_set_unittest.cc  compat_vector.h  compat_vector_unittest.cc  concat.h  invalidation_off_size_unittest.cc  invalidation_on_size_unittest.cc  join.h  range.h  slice.h  slice_unittest.cc  vec.h  vec_unittest.cc
subspace/convert/: subclass.h  subclass_unittest.cc
subspace/fmt/: debug.h  display.h  error.h  formatter.h  formatter_unittest.cc  result.h
subspace/fn/: bind.h  box_fn_defn.h  box_fn_impl.h  box_fn_unittest.cc  callable.h  fn.h  fn_bind.h  fn_box_defn.h  fn_box_impl.h  fn_box_unittest.cc  fn_concepts.h  fn_concepts_unittest.cc  fn_defn.h  fn_impl.h  fn_ref.h  fn_ref_unittest.cc  fn_unittest.cc  run_fn.h  stackfn_defn.h  stackfn_unittest.cc
subspace/iter/: boxed_iterator.h  by_ref.h  chain.h  cloned.h  compat_ranges.h  compat_ranges_unittest.cc  copied.h  cycle.h  empty.h  empty_unittest.cc  enumerate.h  extend.h  filter.h  filter_map.h  flat_map.h  flatten.h  from_iterator.h  fuse.h  generator.h  generator_unittest.cc  inspect.h  into_iterator.h  iterator.h  iterator_concept.h  iterator_defn.h  iterator_impl.h  iterator_ref.h  iterator_unittest.cc  map.h  map_while.h  once.h  once_unittest.cc  once_with.h  once_with_unittest.cc  peekable.h  product.h  repeat.h  repeat_unittest.cc  repeat_with.h  repeat_with_unittest.cc  (+14 more)
subspace/lib/: lib.cc
subspace/macros/: always_inline.h  assume.h  compiler.h  eval_and_concat.h  inline.h  lifetimebound.h  no_unique_address.h  noalias.h  nonnull.h  pure.h  remove_parens.h
subspace/marker/: unsafe.h  unsafe_unittest.cc
subspace/mem/: addressof.h  addressof_unittest.cc  clone.h  clone_unittest.cc  copy.h  forward.h  move.h  move_unittest.cc  mref.h  never_value.h  nonnull.h  nonnull_types_unittest.cc  nonnull_unittest.cc  relocate.h  relocate_unittest.cc  remove_rvalue_reference.h  replace.h  replace_unittest.cc  size_of.h  size_of_unittest.cc  swap.h  swap_unittest.cc  take.h  take_unittest.cc
subspace/num/: cmath_macros.h  cmath_macros_unittest.cc  convert.h  convert_unittest.cc  f32_unittest.cc  f64_unittest.cc  float.h  float_concepts.h  float_impl.h  float_out_of_line.h  fp_category.h  i16_unittest.cc  i32_unittest.cc  i64_unittest.cc  i8_unittest.cc  integer_concepts.h  isize_unittest.cc  num_concepts.h  overflow_integer.h  overflow_integer_unittest.cc  signed_integer.h  signed_integer_impl.h  signed_integer_out_of_line.h  transmogrify.h  transmogrify_unittest.cc  try_from_int_error.h  types.h  u16_unittest.cc  u32_unittest.cc  u64_unittest.cc  u8_unittest.cc  unsigned_integer.h  unsigned_integer_impl.h  unsigned_integer_out_of_line.h  uptr_unittest.cc  usize_unittest.cc
subspace/ops/: eq.h  eq_unittest.cc  ord.h  ord_unittest.cc  range.h  range_literals.h  range_unittest.cc  try.h
subspace/option/: option.h  option_compat.h  option_compat_unittest.cc  option_types_unittest.cc  option_unittest.cc  state.h
subspace/ptr/: copy.h  nonnull.h  nonnull_types_unittest.cc  nonnull_unittest.cc  swap.h  swap_unittest.cc
subspace/result/: result.h  result_types_unittest.cc  result_unittest.cc
subspace/string/: compat_stream.h  compat_stream_unittest.cc
subspace/test/: behaviour_types.h  behaviour_types_unittest.cc  ensure_use.cc  (+2 more)
sus/: CMakeLists.txt  index.html  prelude.h  project.md  sus.cc
tidy/: CMakeLists.txt  README.md  llvm.h  module.cc  smoke_check.cc  smoke_check.h
(+804 files in other folders)
