cc_library(
    name = "subspace",
    hdrs = [
    ],
)

cc_test(
    name = "subspace_unittests",
    deps = [
        ":subspace",
        "@gtest//:gtest_main",
    ],
)

platform(
    name = "x64_windows-clang-cl",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
        "@bazel_tools//tools/cpp:clang-cl",
    ],
)
